<resources>
    <string name="app_name">InvoiceMaker</string>
    <string name="_1_month_free">1 month <b>free</b>\n then <b>$9.99/month</b></string>
    <string name="Companyname_will_soon_be_ready_to"><b>Companyname</b> will soon be ready to:</string>
    <string name="clients">Clients</string>
    <string name="add_a_client">Add a client</string>
    <string name="add_customer_details">Add customer details</string>
    <string name="save_your_customer_s_contact_details_for_faster_invoicing">Save your customer\'s contact details for \n faster invoicing.</string>
    <string name="win_more_jobs">Win more jobs</string>
    <string name="send_estimates_to_show_clients_what_a_job_will_n_cost_and_win_new_work">Send estimates to show clients what a job will \n cost, and win new work.</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="add_client">Add Client</string>
    <string name="choose_from_contacts">Choose from contacts</string>
    <string name="billing_name">Billing name</string>
    <string name="name">Name</string>
    <string name="youremail_gmail_com">yourEmail@gmail.com</string>
    <string name="_0923456789">0923456789</string>
    <string name="mobile">Mobile</string>
    <string name="email">Email</string>
    <string name="add_another_email">Add another email</string>
    <string name="billing_address">Billing address</string>
    <string name="jane_smith">Jane Smith</string>
    <string name="contact">Contact</string>
    <string name="tax_number">Tax number</string>
    <string name="client_s_tax_number">Client\'s tax number</string>
    <string name="website">Website</string>
    <string name="phone">Phone</string>
    <string name="payment_terms">Payment terms</string>
    <string name="none">None</string>
    <string name="add_notes_about_client_they_can_t_see_these">Add notes about client. They can\'t see these</string>
    <string name="create_a_new_project_n_for_this_client">Create a new project \n for this client?</string>
    <string name="keep_your_documents_photos_and_contacts_for_a_project_all_together_in_one_place">Keep your documents, photos and contacts \n for a project all together in one place.</string>
    <string name="don_t_as_me_again">Don\'t as me again</string>
    <string name="new_project">New Project</string>
    <string name="who_is_this_project_for">WHO IS THIS PROJECT FOR?</string>
    <string name="enter">Enter</string>
    <string name="project_details">PROJECT DETAILS</string>
    <string name="location">Location</string>
    <string name="united">United</string>
    <string name="project_contact">Project contact</string>
    <string name="back">Back</string>
    <string name="client">Client</string>
    <string name="company_name">Company name</string>
    <string name="edit">Edit</string>
    <string name="add_email">Add email</string>
    <string name="add_number">Add number</string>
    <string name="create">Create</string>
    <string name="activity">Activity</string>
    <string name="info">Info</string>
    <string name="no_activity_yet">No activity yet</string>
    <string name="create_an_invoice_or_an_estimate_for_enter_text">Create an invoice or an estimate for Enter text</string>
    <string name="more">More</string>
    <string name="workflow">WORKFLOW</string>
    <string name="projects">Projects</string>
    <string name="cashflow">CASHFLOW</string>
    <string name="client_payment_options">Client payment options</string>
    <string name="purchase_orders">Purchase orders</string>
    <string name="credit_memos">Credit memos</string>
    <string name="other_documents">OTHER DOCUMENTS</string>
    <string name="items_expenses_amp_time">ITEMS, EXPENSE  &amp; TIME</string>
    <string name="items">Items</string>
    <string name="expenses">Expenses</string>
    <string name="appointments">Appointments</string>
    <string name="time_tracking">Time Tracking</string>
    <string name="projectDetails">Project details</string>
    <string name="project_name">Project Name</string>
    <string name="status">Status</string>
    <string name="active">Active</string>
    <string name="add_another_location">Add another location</string>
    <string name="start_date">Start date</string>
    <string name="end_date">End date</string>
    <string name="add_contact">Add contact</string>
    <string name="given_name_s">Given name(s)</string>
    <string name="surname">Surname</string>
    <string name="role">Role</string>
    <string name="sorted_alphabetically">Sorted alphabetically</string>
    <string name="please_enter_a_valid_email_address">Please enter a valid email address.</string>
    <string name="message">Message</string>
    <string name="call">Call</string>
    <string name="add_a_phone_number_and_email_address_to_contact_n_this_client">Add a phone number and email address to contact\n this client.</string>
    <string name="preview">Preview</string>
    <string name="bill_to">BILL TO</string>
    <string name="subtotal">Subtotal</string>
    <string name="discount">Discount</string>
    <string name="same_day">Same day</string>
    <string name="payment_methods">PAYMENT METHODS</string>
    <string name="add_photos">Add photos</string>
    <string name="project">Project</string>
    <string name="complete">Complete</string>
    <string name="add_your_privates_notes">Add your privates notes</string>
    <string name="no_results_found">No results found.</string>
    <string name="want_to_change_it_later_or_add_other_rates_go_to_tax_amp_currency_in_settings">Want to change it later or add other rates? Go to <b><![CDATA[Tax & currency in Settings.]]></b></string>
    <string name="online_payment_methods">ONLINE PAYMENT METHODS</string>
    <string name="set_up">Set up</string>
    <string name="accept_paypal">Accept Paypal</string>
    <string name="paypal">Paypal</string>
    <string name="tips">TIPS</string>
    <string name="let_customers_add_a_trip_when_they_pay_online">Let customers add a trip when they pay online.</string>
    <string name="invoice_instructions">INVOICE INSTRUCTIONS</string>
    <string name="payment_instructions">Payment instructions</string>
    <string name="allow_users_to_attach_payments_by_adding_a_remittance_advice_n_section_to_the_bottom_of_invoices">.Allow users to attach payments by adding a remittance advice section to the bottom of invoices.</string>
    <string name="effortlessly_create_and_send_purchase_orders_for_n_supplies">Effortlessly create and send purchase orders for\n supplies</string>
    <string name="comments_appear_at_the_bottom_of_your_n_estimate">Comments appear at the bottom of your\n estimate</string>
    <string name="give_customers_credit_for_things_they_ve_returned_n_or_haven_t_received">Give customers credit for things they\'ve returned\n or haven\'t received</string>
    <string name="this_payment_method_will_be_default_for_all_future_estimates_nyou_can_disable_it_at_any_time_by_editing_an_estimate">This payment method will be default for all future estimates.\nYou can disable it at any time by editing an estimate.</string>
    <string name="new_appointments">New Appointments</string>
    <string name="inform_save_new_item">Save all new items to easily add them in future.\n\nNew items will be saved from invoices, estimates, purchase orders and credit memos.</string>
    <string name="autosave_new_items">Autosave new items</string>
    <string name="got_it">GOT IT</string>
</resources>