<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_addClient">

        <RelativeLayout
            android:id="@+id/viewHeaderAddProject"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_80sdp"
            android:background="@color/white"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/cancelTextView"
                style="@style/medium_blue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_margin="@dimen/page"
                android:text="@string/cancel" />

            <TextView
                android:id="@+id/addClientTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="@dimen/_20sdp"
                android:fontFamily="@font/inter_tight_bold"
                android:text="@string/new_project"
                android:textColor="@color/black"
                android:textSize="@dimen/_16ssp" />


            <TextView
                android:id="@+id/saveTextView"
                style="@style/medium_blue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_margin="@dimen/page"
                android:text="@string/save" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignParentBottom="true"
                android:background="@color/gray_line" />

        </RelativeLayout>

        <TextView
            android:id="@+id/whoIsThisTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/page"
            android:text="@string/who_is_this_project_for"
            android:textColor="#6D7081"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/viewHeaderAddProject" />

        <androidx.cardview.widget.CardView
            android:id="@+id/viewEnter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@color/white"
            app:cardElevation="@dimen/_2sdp"
            app:layout_constraintTop_toBottomOf="@+id/whoIsThisTitle">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp">

                <TextView
                    style="@style/primary_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:text="@string/enter" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="@dimen/page"
                    android:src="@drawable/ic_circle_close" />
            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/projectDetailsTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/page"
            android:text="@string/project_details"
            android:textColor="#6D7081"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/viewEnter" />

        <androidx.cardview.widget.CardView
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@color/white"
            app:layout_constraintTop_toBottomOf="@+id/projectDetailsTitle"
            app:cardElevation="@dimen/_2sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_110sdp">

                <TextView
                    android:id="@+id/mobileTextView"
                    style="@style/primary_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:text="@string/mobile" />

                <EditText
                    android:id="@+id/mobileEdt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/mobileTextView"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@null"
                    android:hint="@string/united"
                    android:inputType="phone"
                    android:textColorHint="@color/color_hint_edt" />

                <View
                    android:id="@+id/lineGray"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_below="@+id/mobileEdt"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@color/gray_line" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/lineGray"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_10sdp">

                    <TextView
                        android:id="@+id/billingTextView"
                        style="@style/primary_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:text="@string/location" />

                    <ImageView
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="@dimen/_20sdp"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="@dimen/page"
                        android:src="@drawable/ic_right" />
                </RelativeLayout>
            </RelativeLayout>

        </androidx.cardview.widget.CardView>


        <include
            android:id="@+id/button_Create"
            layout="@layout/button_blue_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/page"
            android:layout_marginEnd="@dimen/page"
            android:layout_marginBottom="@dimen/_40sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:textButton="@{`Create project`}" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>